add_subdirectory (functions)
add_subdirectory (geometry)
add_subdirectory (graphics)
add_subdirectory (math)
add_subdirectory (numerics)
add_subdirectory (optimization)
add_subdirectory (splines)
add_subdirectory (algorithms)
add_subdirectory (datastructs)
add_subdirectory (maps)
add_subdirectory (utils)
